--- a/ex01.ipynb
+++ b/ex01.ipynb
@@ -271,13 +271,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Theoretical error rates:\n",
     "$$p(error|A;x_{t}) = \\frac{1}{4} + (x_{t} - \\frac{1}{2})^{2}$$\n",
     "$$p(error|A;0.0) = \\frac{1}{4} + (0.0 - \\frac{1}{2})^{2} = 0.5$$\n",
     "$$p(error|A;0.2) = \\frac{1}{4} + (0.2 - \\frac{1}{2})^{2} = 0.34$$\n",
     "$$p(error|A;0.5) = \\frac{1}{4} + (0.5 - \\frac{1}{2})^{2} = 0.25$$\n",
     "$$p(error|A;0.6) = \\frac{1}{4} + (0.6 - \\frac{1}{2})^{2} = 0.26$$\n",
     "\n",
-    "The error standard deviation decreases exponentially with increasing M."
+    "The error standard deviation decreases exponentially with increasing M.\n",
+    "If one compares the expected error rates with the computed error rates, one can see that they are equal for $ M \\to \\infty $.\n"
    ]
   }
  ],
