--- a/ex01.ipynb
+++ b/ex01.ipynb
@@ -355,11 +355,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4 Nearest Neighbor Classification"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def toy_nearest_neighbor_singular(X, Xtrain, Ytrain):\n",
+    "    diff = np.array(list(map(lambda elem: abs(X - elem), Xtrain)))\n",
+    "    smallestElemIndex = np.argmin(diff)\n",
+    "    Y = Ytrain[smallestElemIndex]\n",
+    "    return Y \n",
+    "\n",
+    "def toy_nearest_neighbor(Xtest, Xtrain, Ytrain):\n",
+    "    Ytest = list(map(lambda elem: toy_nearest_neighbor_singular(elem, Xtrain, Ytrain), Xtest))\n",
+    "    return Ytest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def testNNC(N, M):\n",
+    "    train = create_data(N)\n",
+    "    Xtrain = train[0] + train[1]\n",
+    "    Ytrain = [0]*len(train[0]) + [1]*len(train[1])\n",
+    "\n",
+    "    test = create_data(M)\n",
+    "    Xtest = test[0] + test[1]\n",
+    "\n",
+    "    Ytest = toy_nearest_neighbor(Xtest, Xtrain, Ytrain)\n",
+    "\n",
+    "    length = len(Ytest)\n",
+    "    middle_index = length // 2\n",
+    "    first_half = Ytest[:middle_index]\n",
+    "    second_half = Ytest[middle_index:]\n",
+    "\n",
+    "    errors_first_half = sum(first_half)\n",
+    "    errors_second_half = len(second_half) - sum(second_half)\n",
+    "\n",
+    "    error_rate = (errors_first_half + errors_second_half) / length\n",
+    "    return error_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def experimentNCC(WDH, N, M):\n",
+    "    error_rates = []\n",
+    "    for i in range(WDH):\n",
+    "        error_rate = testNNC(N, M)\n",
+    "        error_rates.append(error_rate)\n",
+    "    return sum(error_rates) / len(error_rates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.35629999999999995"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "experimentNCC(100, 2, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.32689999999999986"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "experimentNCC(100, 100, 100)"
+   ]
   }
  ],
  "metadata": {
