feat: upload solution for ex02 1.3

--- a/ex02/nearest-neighbor.ipynb
+++ b/ex02/nearest-neighbor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,53 +187,77 @@
     "\n",
     "    result = np.empty([N, M])\n",
     "    for n in range(N):\n",
-    "        train_element = X_train[n]\n",
+    "        train_element = training[n]\n",
     "        for m in range(M):\n",
-    "            test_elem = X_test[m]\n",
+    "            test_elem = test[m]\n",
     "\n",
     "            result[n][m] = euclid(train_element, test_elem)\n",
+    "\n",
     "\n",
     "    return result\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dist_vec(training, test):\n",
+    "        # training is N x D matrix\n",
+    "    N, D = training.shape\n",
+    "    # test is M x D matrix\n",
+    "    M, D = test.shape\n",
+    "\n",
+    "    result = np.empty([N, M])\n",
+    "    for n in range(N):\n",
+    "        train_element = training[n]\n",
+    "        result[n] = np.sqrt(np.sum(np.square(test - train_element)))\n",
+    "\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[55.67764363, 53.12249994, 56.56854249, ..., 54.91812087,\n",
-       "        50.76416059, 46.87216658],\n",
-       "       [47.51841748, 45.65084884, 48.72371086, ..., 45.475268  ,\n",
-       "        52.10566188, 40.18706259],\n",
-       "       [45.54119015, 53.72150407, 45.07771068, ..., 44.96665431,\n",
-       "        50.8625599 , 41.53311931],\n",
-       "       ...,\n",
-       "       [46.        , 45.54119015, 46.28174586, ..., 51.32250968,\n",
-       "        44.62062303, 48.61069841],\n",
-       "       [44.98888752, 49.07137659, 53.55371136, ..., 57.91372894,\n",
-       "        27.80287755, 40.28647416],\n",
-       "       [44.77722635, 41.07310556, 40.31128874, ..., 43.78355856,\n",
-       "        52.        , 44.22668877]])"
+       "array([[0., 0.],\n",
+       "       [0., 0.]])"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dist_loop(X_train, X_test)"
+    "dist_loop(np.array([[1,2,3],[1,2,3]]), np.array([[1,2,3],[1,2,3]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0.],\n",
+       "       [0., 0.]])"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist_vec(np.array([[1,2,3],[1,2,3]]), np.array([[1,2,3],[1,2,3]]))"
+   ]
   }
  ],
  "metadata": {
