feat: add solution for ex02 1.3

--- a/ex02/nearest-neighbor.ipynb
+++ b/ex02/nearest-neighbor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,64 +199,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vectorisation with puther python loop\n",
+    "#def dist_vec(training, test):\n",
+    "#    # training is N x D matrix\n",
+    "#    N, D = training.shape\n",
+    "#    # test is M x D matrix\n",
+    "#    M, D = test.shape\n",
+    "#\n",
+    "#    result = np.empty([N, M])\n",
+    "#    for n in range(N):\n",
+    "#        train_element = training[n]\n",
+    "#        result[n] = np.sqrt(np.sum(np.square(test - train_element)))\n",
+    "#\n",
+    "#    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dist_vec(training, test):\n",
-    "        # training is N x D matrix\n",
-    "    N, D = training.shape\n",
-    "    # test is M x D matrix\n",
-    "    M, D = test.shape\n",
-    "\n",
-    "    result = np.empty([N, M])\n",
-    "    for n in range(N):\n",
-    "        train_element = training[n]\n",
-    "        result[n] = np.sqrt(np.sum(np.square(test - train_element)))\n",
-    "\n",
-    "    return result\n"
+    "    squared_diff = np.square(training[:,None] - test)\n",
+    "    sum_diffs = np.sum(squared_diff, axis=2)\n",
+    "    result = np.sqrt(sum_diffs)\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res1 = dist_loop(X_train, X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res2 = dist_vec(X_train, X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0., 0.],\n",
-       "       [0., 0.]])"
+       "(1078, 719)"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dist_loop(np.array([[1,2,3],[1,2,3]]), np.array([[1,2,3],[1,2,3]]))"
+    "res1.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0., 0.],\n",
-       "       [0., 0.]])"
+       "(1078, 719)"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dist_vec(np.array([[1,2,3],[1,2,3]]), np.array([[1,2,3],[1,2,3]]))"
+    "res2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(np.sum(res1) == np.sum(res2))"
    ]
   }
  ],
