--- a/ex02/nearest-neighbor.ipynb
+++ b/ex02/nearest-neighbor.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "(1078, 719)"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 434,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "(1078, 719)"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 435,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,10 +321,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def nearest_neighbor(xtrain, ytrain, xtest, ytest, k, num1, num2):\n",
+    "    indices_train_num1 = np.argwhere(ytrain == num1)\n",
+    "    xtrain_num1 = np.squeeze(xtrain[indices_train_num1], axis=1)\n",
+    "\n",
+    "    indices_train_num2 = np.argwhere(ytrain == num2)\n",
+    "    xtrain_num2 = np.squeeze(xtrain[indices_train_num2], axis=1)\n",
+    "\n",
+    "    indices_test_num1 = np.argwhere(ytest == num1)\n",
+    "    xtest_num1 = np.squeeze(xtest[indices_test_num1], axis=1)\n",
+    "\n",
+    "    indices_test_num2 = np.argwhere(ytest == num2)\n",
+    "    xtest_num2 = np.squeeze(xtest[indices_test_num2], axis=1)\n",
+    "\n",
+    "    \n",
+    "    xtrain_filtered = np.concatenate((xtrain_num1, xtrain_num2), axis=0)\n",
+    "    xtest_filtered = np.concatenate((xtest_num1, xtest_num2), axis=0)\n",
+    "\n",
+    "    ytrain_indices = np.concatenate((indices_train_num1, indices_train_num2), axis=0)\n",
+    "    ytest_indices = np.concatenate((indices_test_num1, indices_test_num2), axis=0)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    dist = dist_vec(xtrain_filtered, xtest_filtered)\n",
+    "    argsorted = np.argsort(dist, axis=0)\n",
+    "    min3 = argsorted[:,:3]\n",
+    "    return ytrain_indices[min3]\n",
+    "    \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
