--- a/ex02/nearest-neighbor.ipynb
+++ b/ex02/nearest-neighbor.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "(1078, 719)"
       ]
      },
-     "execution_count": 434,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "(1078, 719)"
       ]
      },
-     "execution_count": 435,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,38 +321,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbor(xtrain, ytrain, xtest, ytest, k, num1, num2):\n",
     "    indices_train_num1 = np.argwhere(ytrain == num1)\n",
     "    xtrain_num1 = np.squeeze(xtrain[indices_train_num1], axis=1)\n",
+    "    ytrain_num1 = np.squeeze(ytrain[indices_train_num1], axis=1)\n",
     "\n",
     "    indices_train_num2 = np.argwhere(ytrain == num2)\n",
     "    xtrain_num2 = np.squeeze(xtrain[indices_train_num2], axis=1)\n",
+    "    ytrain_num2 = np.squeeze(ytrain[indices_train_num2], axis=1)\n",
+    "\n",
     "\n",
     "    indices_test_num1 = np.argwhere(ytest == num1)\n",
     "    xtest_num1 = np.squeeze(xtest[indices_test_num1], axis=1)\n",
+    "    ytest_num1 = np.squeeze(ytest[indices_test_num1], axis=1)\n",
+    "\n",
     "\n",
     "    indices_test_num2 = np.argwhere(ytest == num2)\n",
     "    xtest_num2 = np.squeeze(xtest[indices_test_num2], axis=1)\n",
+    "    ytest_num2 = np.squeeze(ytest[indices_test_num2], axis=1)\n",
     "\n",
-    "    \n",
+    "\n",
+    "\n",
     "    xtrain_filtered = np.concatenate((xtrain_num1, xtrain_num2), axis=0)\n",
+    "    ytrain_filtered = np.concatenate((ytrain_num1, ytrain_num2), axis=0)\n",
+    "\n",
     "    xtest_filtered = np.concatenate((xtest_num1, xtest_num2), axis=0)\n",
-    "\n",
-    "    ytrain_indices = np.concatenate((indices_train_num1, indices_train_num2), axis=0)\n",
-    "    ytest_indices = np.concatenate((indices_test_num1, indices_test_num2), axis=0)\n",
-    "\n",
+    "    ytest_filtered = np.concatenate((ytest_num1, ytest_num2), axis=0)\n",
     "\n",
     "\n",
     "    dist = dist_vec(xtrain_filtered, xtest_filtered)\n",
     "    argsorted = np.argsort(dist, axis=0)\n",
     "    min3 = argsorted[:,:3]\n",
-    "    return ytrain_indices[min3]\n",
+    "\n",
+    "    \n",
+    "    \n",
     "    \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xtest (144, 64)\n",
+      "xtrain (219, 64)\n",
+      "dist (144, 219)\n",
+      "argsorted (144, 219)\n",
+      "min3 (144, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "41.66666666666667"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ytrain = y_train\n",
+    "xtrain = X_train\n",
+    "ytest = y_test\n",
+    "xtest = X_test\n",
+    "num1  =3\n",
+    "num2 = 9\n",
+    "\n",
+    "indices_train_num1 = np.argwhere(ytrain == num1)\n",
+    "xtrain_num1 = np.squeeze(xtrain[indices_train_num1], axis=1)\n",
+    "ytrain_num1 = np.squeeze(ytrain[indices_train_num1], axis=1)\n",
+    "\n",
+    "indices_train_num2 = np.argwhere(ytrain == num2)\n",
+    "xtrain_num2 = np.squeeze(xtrain[indices_train_num2], axis=1)\n",
+    "ytrain_num2 = np.squeeze(ytrain[indices_train_num2], axis=1)\n",
+    "\n",
+    "\n",
+    "indices_test_num1 = np.argwhere(ytest == num1)\n",
+    "xtest_num1 = np.squeeze(xtest[indices_test_num1], axis=1)\n",
+    "ytest_num1 = np.squeeze(ytest[indices_test_num1], axis=1)\n",
+    "\n",
+    "\n",
+    "indices_test_num2 = np.argwhere(ytest == num2)\n",
+    "xtest_num2 = np.squeeze(xtest[indices_test_num2], axis=1)\n",
+    "ytest_num2 = np.squeeze(ytest[indices_test_num2], axis=1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "xtrain_filtered = np.concatenate((xtrain_num1, xtrain_num2), axis=0)\n",
+    "ytrain_filtered = np.concatenate((ytrain_num1, ytrain_num2), axis=0)\n",
+    "\n",
+    "xtest_filtered = np.concatenate((xtest_num1, xtest_num2), axis=0)\n",
+    "ytest_filtered = np.concatenate((ytest_num1, ytest_num2), axis=0)\n",
+    "\n",
+    "\n",
+    "print(\"xtest\",xtest_filtered.shape)\n",
+    "print(\"xtrain\", xtrain_filtered.shape)\n",
+    "\n",
+    "dist = dist_vec(xtrain_filtered, xtest_filtered)\n",
+    "\n",
+    "\n",
+    "dist = np.transpose(dist)\n",
+    "\n",
+    "\n",
+    "print(\"dist\", dist.shape)\n",
+    "\n",
+    "argsorted = np.argsort(dist, axis=0)\n",
+    "\n",
+    "print(\"argsorted\", argsorted.shape)\n",
+    "min3 = argsorted[:,:3]\n",
+    "\n",
+    "print(\"min3\", min3.shape)\n",
+    "\n",
+    "xtest_neighbor_labels = ytrain_filtered[min3]\n",
+    "xtest_neighbor_labels_average = np.sum(xtest_neighbor_labels, axis=1) / 3\n",
+    "xtest_neighbor_labels_average[xtest_neighbor_labels_average<=5]=3\n",
+    "xtest_neighbor_labels_average[xtest_neighbor_labels_average>5]=9\n",
+    "\n",
+    " \n",
+    "diff = np.abs(xtest_neighbor_labels_average - ytest_filtered)\n",
+    "diff[diff>0]=1\n",
+    "(np.sum(diff) / xtest_neighbor_labels_average.size) * 100\n"
    ]
   }
  ],
