--- a/ex02/nearest-neighbor.ipynb
+++ b/ex02/nearest-neighbor.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "(1078, 719)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "(1078, 719)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,6 +326,12 @@
    "outputs": [],
    "source": [
     "def nearest_neighbor(xtrain, ytrain, xtest, ytest, k, num1, num2):\n",
+    "\n",
+    "    if(num1 > num2):\n",
+    "        save = num2\n",
+    "        num2 = num1\n",
+    "        num1 = save\n",
+    "\n",
     "    indices_train_num1 = np.argwhere(ytrain == num1)\n",
     "    xtrain_num1 = np.squeeze(xtrain[indices_train_num1], axis=1)\n",
     "    ytrain_num1 = np.squeeze(ytrain[indices_train_num1], axis=1)\n",
@@ -352,106 +358,54 @@
     "    xtest_filtered = np.concatenate((xtest_num1, xtest_num2), axis=0)\n",
     "    ytest_filtered = np.concatenate((ytest_num1, ytest_num2), axis=0)\n",
     "\n",
-    "\n",
     "    dist = dist_vec(xtrain_filtered, xtest_filtered)\n",
-    "    argsorted = np.argsort(dist, axis=0)\n",
-    "    min3 = argsorted[:,:3]\n",
+    "    dist = np.transpose(dist)\n",
+    "    argsorted = np.argsort(dist, axis=1)\n",
+    "    min3 = argsorted[:,:k]\n",
+    "    xtest_neighbor_labels = ytrain_filtered[min3]\n",
     "\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "\n"
+    "    xtest_neighbor_labels_average = np.mean(xtest_neighbor_labels, axis=1)\n",
+    "    middle_value = (num2 + num1) / 2\n",
+    "    xtest_neighbor_labels_average[xtest_neighbor_labels_average<=middle_value]=num1\n",
+    "    xtest_neighbor_labels_average[xtest_neighbor_labels_average>middle_value]=num2\n",
+    "\n",
+    "    diff = xtest_neighbor_labels_average - ytest_filtered\n",
+    "    diff[diff!=0]=1\n",
+    "    print((np.sum(diff) / xtest_neighbor_labels_average.size) * 100,\"%\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "xtest (144, 64)\n",
-      "xtrain (219, 64)\n",
-      "dist (144, 219)\n",
-      "argsorted (144, 219)\n",
-      "min3 (144, 3)\n"
+      "1.3888888888888888 %\n",
+      "0.6944444444444444 %\n",
+      "0.6944444444444444 %\n",
+      "0.6944444444444444 %\n",
+      "0.6944444444444444 %\n",
+      "2.083333333333333 %\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "41.66666666666667"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ytrain = y_train\n",
-    "xtrain = X_train\n",
-    "ytest = y_test\n",
-    "xtest = X_test\n",
-    "num1  =3\n",
-    "num2 = 9\n",
-    "\n",
-    "indices_train_num1 = np.argwhere(ytrain == num1)\n",
-    "xtrain_num1 = np.squeeze(xtrain[indices_train_num1], axis=1)\n",
-    "ytrain_num1 = np.squeeze(ytrain[indices_train_num1], axis=1)\n",
-    "\n",
-    "indices_train_num2 = np.argwhere(ytrain == num2)\n",
-    "xtrain_num2 = np.squeeze(xtrain[indices_train_num2], axis=1)\n",
-    "ytrain_num2 = np.squeeze(ytrain[indices_train_num2], axis=1)\n",
-    "\n",
-    "\n",
-    "indices_test_num1 = np.argwhere(ytest == num1)\n",
-    "xtest_num1 = np.squeeze(xtest[indices_test_num1], axis=1)\n",
-    "ytest_num1 = np.squeeze(ytest[indices_test_num1], axis=1)\n",
-    "\n",
-    "\n",
-    "indices_test_num2 = np.argwhere(ytest == num2)\n",
-    "xtest_num2 = np.squeeze(xtest[indices_test_num2], axis=1)\n",
-    "ytest_num2 = np.squeeze(ytest[indices_test_num2], axis=1)\n",
-    "\n",
-    "\n",
-    "\n",
-    "xtrain_filtered = np.concatenate((xtrain_num1, xtrain_num2), axis=0)\n",
-    "ytrain_filtered = np.concatenate((ytrain_num1, ytrain_num2), axis=0)\n",
-    "\n",
-    "xtest_filtered = np.concatenate((xtest_num1, xtest_num2), axis=0)\n",
-    "ytest_filtered = np.concatenate((ytest_num1, ytest_num2), axis=0)\n",
-    "\n",
-    "\n",
-    "print(\"xtest\",xtest_filtered.shape)\n",
-    "print(\"xtrain\", xtrain_filtered.shape)\n",
-    "\n",
-    "dist = dist_vec(xtrain_filtered, xtest_filtered)\n",
-    "\n",
-    "\n",
-    "dist = np.transpose(dist)\n",
-    "\n",
-    "\n",
-    "print(\"dist\", dist.shape)\n",
-    "\n",
-    "argsorted = np.argsort(dist, axis=0)\n",
-    "\n",
-    "print(\"argsorted\", argsorted.shape)\n",
-    "min3 = argsorted[:,:3]\n",
-    "\n",
-    "print(\"min3\", min3.shape)\n",
-    "\n",
-    "xtest_neighbor_labels = ytrain_filtered[min3]\n",
-    "xtest_neighbor_labels_average = np.sum(xtest_neighbor_labels, axis=1) / 3\n",
-    "xtest_neighbor_labels_average[xtest_neighbor_labels_average<=5]=3\n",
-    "xtest_neighbor_labels_average[xtest_neighbor_labels_average>5]=9\n",
-    "\n",
-    " \n",
-    "diff = np.abs(xtest_neighbor_labels_average - ytest_filtered)\n",
-    "diff[diff>0]=1\n",
-    "(np.sum(diff) / xtest_neighbor_labels_average.size) * 100\n"
+    "nearest_neighbor(X_train, y_train, X_test, y_test, 1, 3, 9)\n",
+    "nearest_neighbor(X_train, y_train, X_test, y_test, 3, 3, 9)\n",
+    "nearest_neighbor(X_train, y_train, X_test, y_test, 5, 3, 9)\n",
+    "nearest_neighbor(X_train, y_train, X_test, y_test, 9, 3, 9)\n",
+    "nearest_neighbor(X_train, y_train, X_test, y_test, 17, 3, 9)\n",
+    "nearest_neighbor(X_train, y_train, X_test, y_test, 33, 3, 9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When at least k=3 neighbors are chosen, the performance stays the same until an upper bound which is k=17 in this case."
    ]
   }
  ],
