--- a/ex02/nearest-neighbor.ipynb
+++ b/ex02/nearest-neighbor.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,68 +247,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res1 = dist_loop(X_train, X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res2 = dist_vec(X_train, X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1078, 719)"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res1.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1078, 719)"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res2.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "res1 = dist_loop(X_train, X_test)\n",
+    "res2 = dist_vec(X_train, X_test)\n",
     "assert(np.sum(res1) == np.sum(res2))"
    ]
   },
@@ -321,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,51 +276,31 @@
     "        num2 = num1\n",
     "        num1 = save\n",
     "\n",
-    "    indices_train_num1 = np.argwhere(ytrain == num1)\n",
-    "    xtrain_num1 = np.squeeze(xtrain[indices_train_num1], axis=1)\n",
-    "    ytrain_num1 = np.squeeze(ytrain[indices_train_num1], axis=1)\n",
+    "    X_train_only_3_9 = xtrain[np.isin(ytrain, [3,9])]\n",
+    "    y_train_only_3_9 = ytrain[np.isin(ytrain, [3,9])]\n",
     "\n",
-    "    indices_train_num2 = np.argwhere(ytrain == num2)\n",
-    "    xtrain_num2 = np.squeeze(xtrain[indices_train_num2], axis=1)\n",
-    "    ytrain_num2 = np.squeeze(ytrain[indices_train_num2], axis=1)\n",
+    "    X_test_only_3_9 = xtest[np.isin(ytest, [3,9])]\n",
+    "    y_test_only_3_9 = ytest[np.isin(ytest, [3,9])]\n",
     "\n",
-    "\n",
-    "    indices_test_num1 = np.argwhere(ytest == num1)\n",
-    "    xtest_num1 = np.squeeze(xtest[indices_test_num1], axis=1)\n",
-    "    ytest_num1 = np.squeeze(ytest[indices_test_num1], axis=1)\n",
-    "\n",
-    "\n",
-    "    indices_test_num2 = np.argwhere(ytest == num2)\n",
-    "    xtest_num2 = np.squeeze(xtest[indices_test_num2], axis=1)\n",
-    "    ytest_num2 = np.squeeze(ytest[indices_test_num2], axis=1)\n",
-    "\n",
-    "\n",
-    "\n",
-    "    xtrain_filtered = np.concatenate((xtrain_num1, xtrain_num2), axis=0)\n",
-    "    ytrain_filtered = np.concatenate((ytrain_num1, ytrain_num2), axis=0)\n",
-    "\n",
-    "    xtest_filtered = np.concatenate((xtest_num1, xtest_num2), axis=0)\n",
-    "    ytest_filtered = np.concatenate((ytest_num1, ytest_num2), axis=0)\n",
-    "\n",
-    "    dist = dist_vec(xtrain_filtered, xtest_filtered)\n",
+    "    dist = dist_vec(X_train_only_3_9, X_test_only_3_9)\n",
     "    dist = np.transpose(dist)\n",
     "    argsorted = np.argsort(dist, axis=1)\n",
     "    min3 = argsorted[:,:k]\n",
-    "    xtest_neighbor_labels = ytrain_filtered[min3]\n",
+    "    xtest_neighbor_labels = y_train_only_3_9[min3]\n",
     "\n",
     "    xtest_neighbor_labels_average = np.mean(xtest_neighbor_labels, axis=1)\n",
     "    middle_value = (num2 + num1) / 2\n",
     "    xtest_neighbor_labels_average[xtest_neighbor_labels_average<=middle_value]=num1\n",
     "    xtest_neighbor_labels_average[xtest_neighbor_labels_average>middle_value]=num2\n",
     "\n",
-    "    diff = xtest_neighbor_labels_average - ytest_filtered\n",
+    "    diff = xtest_neighbor_labels_average - y_test_only_3_9\n",
     "    diff[diff!=0]=1\n",
     "    print((np.sum(diff) / xtest_neighbor_labels_average.size) * 100,\"%\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
