--- a/ex02/Untitled.ipynb
+++ b/ex02/Untitled.ipynb
@@ -2,22 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a6506d28",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.datasets import load_digits\n",
-    "from sklearn import model_selection\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "id": "ad73c9ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +12,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61aebf43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,10 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f6da04fc",
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'digits' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-1344fbaa42ec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdigits\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mimages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdigits\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtarget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdigits\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtarget_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdigits\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtarget_names\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'digits' is not defined"
+     ]
+    }
+   ],
    "source": [
     "data = digits.data\n",
     "images = digits.images\n",
@@ -50,7 +45,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e3f2968",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +54,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58b02294",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +63,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3410153",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +72,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ace67a8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +82,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b189a9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +94,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f005c305",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +106,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "052a2741",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +118,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c1c25a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +132,7 @@
     "    \n",
     "    assert D == D2, \"different length of pixel vectors\"\n",
     "    \n",
-    "    result = np.zeros((N, M))\n",
+    "    result = np.empty((N, M))\n",
     "    \n",
     "    for i in range(N):\n",
     "        for j in range(M):\n",
@@ -157,7 +144,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00b795bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +153,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a34027a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +162,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b5ba4b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +181,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51c90575",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +193,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5c5372e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +213,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "722fa69f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +222,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20f6d952",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +231,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eddc8f75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +240,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a69d25b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +249,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b614081c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +258,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "940debf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +267,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bea1acbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +280,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cca2c71b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -313,7 +287,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e3b98855",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,10 +303,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "86ee88ac",
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dist_vec' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-7e8812ff894a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdist_vec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'dist_vec' is not defined"
+     ]
+    }
+   ],
    "source": [
     "dist_vec"
    ]
@@ -341,7 +325,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "83f5860d",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +424,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85d1f201",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +433,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd31ae61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +442,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a83bd5cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +451,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7baf2547",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +491,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12d6b49c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -520,7 +498,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2320af4d",
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +526,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7f1e689",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,14 +547,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb1c831f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b54457e3",
    "metadata": {},
    "source": [
     "# 2 Cross-validation"
@@ -587,7 +561,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "75db02fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +578,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f31490a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +598,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c87f97d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +607,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc0870bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +618,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c88561f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +628,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -673,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
