feat(ex02): 3.2 qda predictions

--- a/ex02/Exercise 2.ipynb
+++ b/ex02/Exercise 2.ipynb
@@ -528,42 +528,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 7 108 108\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([[124.20753494,  90.59498242],\n",
-       "        [ 90.59498242, 108.70457176]]),\n",
-       " array([[[263.42622927, 279.87860773],\n",
-       "         [279.87860773, 378.45360065]],\n",
-       " \n",
-       "        [[120.89714047, 114.38711379],\n",
-       "         [114.38711379, 187.07084048]]]),\n",
-       " array([15.42857143, 15.42857143]))"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fit_qda(X_train_reduced, y_train)"
+    "mu, covmat, p = fit_qda(X_train_reduced, y_train)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 3.2 QDA Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TODO vectorize this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_qda(mu, covmat, p, test_features):\n",
+    "    return [np.argmin([0.5 * (x_i - mu[k]).dot(np.linalg.inv(covmat[k])).dot((x_i - mu[k])) + b_k(covmat, p)[k] for k in [0, 1]])\n",
+    "               for x_i in test_features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True])"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([1, 7])[predict_qda(*fit_qda(X_train_reduced, y_train), X_test_reduced)] == y_test"
+   ]
   }
  ],
  "metadata": {
