feat(ex4): density tree

--- a/ex04/tree-methods-stubs.ipynb
+++ b/ex04/tree-methods-stubs.ipynb
@@ -9,18 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import modules\n",
     "import numpy as np\n",
-    "... # your code here"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.datasets import load_digits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,13 +95,16 @@
     "            node = stack.pop()\n",
     "            n = node.data.shape[0] # number of instances in present node\n",
     "            if n >= n_min:\n",
+    "\n",
     "                # Call 'make_density_split_node()' with 'D_try' randomly selected \n",
     "                # indices from 'valid_features'. This turns 'node' into a split node\n",
     "                # and returns the two children, which must be placed on the 'stack'.\n",
-    "                ... # your code here\n",
+    "                feature_indices = np.random.permutation(np.arange(D))[:D_try]\n",
+    "                left, right = make_density_split_node(node, N, feature_indices)\n",
+    "                stack += [left, right]\n",
     "            else:\n",
     "                # Call 'make_density_leaf_node()' to turn 'node' into a leaf node.\n",
-    "                ... # your code here\n",
+    "                make_density_leaf_node(node, N)\n",
     "\n",
     "    def predict(self, x):\n",
     "        leaf = self.find_leaf(x)\n",
@@ -112,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,46 +136,107 @@
     "    for j in feature_indices:\n",
     "        # Hint: For each feature considered, first remove duplicate feature values using \n",
     "        # 'np.unique()'. Describe here why this is necessary.\n",
-    "        data_unique = ...(node.data[:, j])\n",
+    "        # It is necessary because otherwise we would recieve a threshold candidates\n",
+    "        # on a feature value not between two of them\n",
+    "        data_unique = np.sort(np.unique(node.data[:, j]), axis=0)\n",
     "        # Compute candidate thresholds\n",
-    "        tj = ...\n",
+    "        tj = (data_unique[1:] + data_unique[:-1]) / 2\n",
     "        \n",
     "        # Illustration: for loop - hint: vectorized version is possible\n",
     "        for t in tj:\n",
     "            # Compute the error\n",
-    "            loo_error = ...\n",
+    "            data_below_threshold = data[data <= t]\n",
+    "            N_l = data_below_threshold.shape[0]\n",
+    "            \n",
+    "            M_l = data_below_threshold.max(axis=0)\n",
+    "            m_l = data_below_threshold.min(axis=0)\n",
+    "            \n",
+    "            M_l += M_l == m_l\n",
+    "\n",
+    "            V_l = np.product(M_l - m_l)\n",
+    "            loo_error = (N_l / (N * V_l)) * ((N_l / N) - 2 * (N_l - 1) / (N - 1))\n",
     "            \n",
     "            # choose the best threshold that\n",
     "            if loo_error < e_min:\n",
-    "                e_min = ...\n",
-    "                j_min = ...\n",
-    "                t_min = ...\n",
+    "                e_min = loo_error\n",
+    "                j_min = j\n",
+    "                t_min = t\n",
     "\n",
     "    # create children\n",
-    "    left = Node()\n",
-    "    right = Node()\n",
+    "    node.left = Node()\n",
+    "    node.right = Node()\n",
     "    \n",
     "    # initialize 'left' and 'right' with the data subsets and bounding boxes\n",
     "    # according to the optimal split found above\n",
-    "    left.data = ... # store data in left node -- for subsequent splits\n",
-    "    left.box = ... # store bounding box in left node\n",
-    "    right.data = ...\n",
-    "    right.box = ...\n",
+    "    is_left = node.data[:, j_min] < t_min\n",
+    "    node.left.data = node.data[is_left]\n",
+    "    node.left.box = (node.left.data.max(), node.left.data.min())\n",
+    "    node.right.data = node.data[~is_left]\n",
+    "    node.right.box = (node.right.data.max(), node.right.data.min())\n",
     "\n",
     "    # turn the current 'node' into a split node\n",
     "    # (store children and split condition)\n",
-    "    node.left = left\n",
-    "    node.right = right\n",
-    "    node.feature = ...\n",
-    "    node.threshold = ...\n",
+    "    node.feature = j_min\n",
+    "    node.threshold = t_min\n",
     "\n",
-    "    # return the children (to be placed on the stack)\n",
-    "    return left, right"
+    "    return node.left, node.right"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  0., ..., 15., 15., 15.],\n",
+       "       [ 0.,  0.,  0., ..., 16., 16., 16.],\n",
+       "       [ 0.,  0.,  0., ..., 16., 16., 16.],\n",
+       "       ...,\n",
+       "       [ 0.,  0.,  0., ..., 16., 16., 16.],\n",
+       "       [ 0.,  0.,  0., ..., 16., 16., 16.],\n",
+       "       [ 0.,  0.,  0., ..., 16., 16., 16.]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sort(data, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  5., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ..., 10.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ..., 16.,  9.,  0.],\n",
+       "       ...,\n",
+       "       [ 0.,  0.,  1., ...,  6.,  0.,  0.],\n",
+       "       [ 0.,  0.,  2., ..., 12.,  0.,  0.],\n",
+       "       [ 0.,  0., 10., ..., 12.,  1.,  0.]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +248,7 @@
     "    # compute and store leaf response\n",
     "    n = node.data.shape[0]\n",
     "    v = ...\n",
-    "    node.response = ..."
+    "    node.response = n / N"
    ]
   },
   {
@@ -198,7 +262,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -243,53 +306,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def make_decision_split_node(node, feature_indices):\n",
-    "    '''\n",
-    "    node: the node to be split\n",
-    "    feature_indices: a numpy array of length 'D_try', containing the feature \n",
-    "                     indices to be considered in the present split\n",
-    "    '''\n",
-    "    n, D = node.data.shape\n",
-    "\n",
-    "    # find best feature j (among 'feature_indices') and best threshold t for the split\n",
-    "    ... # your code here\n",
-    "\n",
-    "    # create children\n",
-    "    left = Node()\n",
-    "    right = Node()\n",
-    "    \n",
-    "    # initialize 'left' and 'right' with the data subsets and labels\n",
-    "    # according to the optimal split found above\n",
-    "    left.data = ... # data in left node\n",
-    "    left.labels = ... # corresponding labels\n",
-    "    right.data = ...\n",
-    "    right.labels = ...\n",
-    "\n",
-    "    # turn the current 'node' into a split node\n",
-    "    # (store children and split condition)\n",
-    "    node.left = left\n",
-    "    node.right = right\n",
-    "    node.feature = ...\n",
-    "    node.threshold = ...\n",
-    "\n",
-    "    # return the children (to be placed on the stack)\n",
-    "    return left, right    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -307,9 +325,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -320,7 +337,7 @@
     "    '''\n",
     "    check if 'node' ontains only instances of the same digit\n",
     "    '''\n",
-    "    return ... # your code here"
+    "    return len(np.unique(node.labels)) == 1"
    ]
   },
   {
@@ -332,9 +349,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -342,14 +358,17 @@
    "outputs": [],
    "source": [
     "# read and prepare the digits data\n",
-    "... # your code here"
+    "digits = load_digits()\n",
+    "data = digits.data\n",
+    "images = digits.images\n",
+    "target = digits.target\n",
+    "target_names = digits.target_names"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -361,6 +380,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree = DensityTree()\n",
+    "threes = data[target == 3]\n",
+    "tree.train(threes, len(threes) / len(data))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -369,9 +399,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -395,9 +424,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -430,7 +458,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -458,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
