fix(ex4): wrong M/m in loo error

--- a/ex04/tree-methods-stubs.ipynb
+++ b/ex04/tree-methods-stubs.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,20 +142,9 @@
     "        # Compute candidate thresholds\n",
     "        tj = (data_unique[1:] + data_unique[:-1]) / 2\n",
     "        \n",
-    "        # Illustration: for loop - hint: vectorized version is possible\n",
     "        for t in tj:\n",
-    "            # Compute the error\n",
-    "            data_below_threshold = data[data <= t]\n",
-    "            N_l = data_below_threshold.shape[0]\n",
-    "            \n",
-    "            M_l = data_below_threshold.max(axis=0)\n",
-    "            m_l = data_below_threshold.min(axis=0)\n",
-    "            \n",
-    "            M_l += M_l == m_l\n",
-    "\n",
-    "            V_l = np.product(M_l - m_l)\n",
-    "            loo_error = (N_l / (N * V_l)) * ((N_l / N) - 2 * (N_l - 1) / (N - 1))\n",
-    "            \n",
+    "            loo_error = leave_one_out_error(node.data, node.data[node.data[:, j] <= t], t, N)\n",
+    "           \n",
     "            # choose the best threshold that\n",
     "            if loo_error < e_min:\n",
     "                e_min = loo_error\n",
@@ -179,59 +168,20 @@
     "    node.feature = j_min\n",
     "    node.threshold = t_min\n",
     "\n",
-    "    return node.left, node.right"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.,  0.,  0., ..., 15., 15., 15.],\n",
-       "       [ 0.,  0.,  0., ..., 16., 16., 16.],\n",
-       "       [ 0.,  0.,  0., ..., 16., 16., 16.],\n",
-       "       ...,\n",
-       "       [ 0.,  0.,  0., ..., 16., 16., 16.],\n",
-       "       [ 0.,  0.,  0., ..., 16., 16., 16.],\n",
-       "       [ 0.,  0.,  0., ..., 16., 16., 16.]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.sort(data, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.,  0.,  5., ...,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ..., 10.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ..., 16.,  9.,  0.],\n",
-       "       ...,\n",
-       "       [ 0.,  0.,  1., ...,  6.,  0.,  0.],\n",
-       "       [ 0.,  0.,  2., ..., 12.,  0.,  0.],\n",
-       "       [ 0.,  0., 10., ..., 12.,  1.,  0.]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data"
+    "    return node.left, node.right\n",
+    "\n",
+    "\n",
+    "def leave_one_out_error(data, data_below_threshold, t, N):\n",
+    "    N_l = data_below_threshold.shape[0]\n",
+    "    \n",
+    "    M_l = data_below_threshold.max(axis=0)\n",
+    "    m_l = data_below_threshold.min(axis=0)\n",
+    "    \n",
+    "    # sadly this also works to fix the box of the node\n",
+    "    M_l += M_l == m_l\n",
+    "\n",
+    "    V_l = np.product(M_l - m_l)\n",
+    "    return (N_l / (N * V_l)) * ((N_l / N) - 2 * (N_l - 1) / (N - 1))\n"
    ]
   },
   {
@@ -293,7 +243,8 @@
     "                # Call 'make_decision_split_node()' with 'D_try' randomly selected \n",
     "                # feature indices. This turns 'node' into a split node\n",
     "                # and returns the two children, which must be placed on the 'stack'.\n",
-    "                ... # your code here\n",
+    "                \n",
+    "                left, right = mak\n",
     "            else:\n",
     "                # Call 'make_decision_leaf_node()' to turn 'node' into a leaf node.\n",
     "                ... # your code here\n",
@@ -307,6 +258,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_decision_split_node(node, feature_indices):\n",
+    "    '''\n",
+    "    node: the node to be split\n",
+    "    feature_indices: a numpy array of length 'D_try', containing the feature \n",
+    "                     indices to be considered in the present split\n",
+    "    '''\n",
+    "    n, D = node.data.shape\n",
+    "\n",
+    "    # find best feature j (among 'feature_indices') and best threshold t for the split\n",
+    "    ... # your code here\n",
+    "\n",
+    "    # create children\n",
+    "    left = Node()\n",
+    "    right = Node()\n",
+    "    \n",
+    "    # initialize 'left' and 'right' with the data subsets and labels\n",
+    "    # according to the optimal split found above\n",
+    "    left.data = ... # data in left node\n",
+    "    left.labels = ... # corresponding labels\n",
+    "    right.data = ...\n",
+    "    right.labels = ...\n",
+    "\n",
+    "    # turn the current 'node' into a split node\n",
+    "    # (store children and split condition)\n",
+    "    node.left = left\n",
+    "    node.right = right\n",
+    "    node.feature = ...\n",
+    "    node.threshold = ...\n",
+    "\n",
+    "    # return the children (to be placed on the stack)\n",
+    "    return left, right    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -325,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -381,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
