fix(ex4): add both loo errs together

--- a/ex04/tree-methods-stubs.ipynb
+++ b/ex04/tree-methods-stubs.ipynb
@@ -115,9 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-71-9dc4ad03120d>, line 26)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-71-9dc4ad03120d>\"\u001b[0;36m, line \u001b[0;32m26\u001b[0m\n\u001b[0;31m    + leave_one_out_error(node.data, node.data[node.data[:, j] >= t], t, N)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "def make_density_split_node(node, N, feature_indices):\n",
     "    '''\n",
@@ -143,8 +152,9 @@
     "        tj = (data_unique[1:] + data_unique[:-1]) / 2\n",
     "        \n",
     "        for t in tj:\n",
-    "            loo_error = leave_one_out_error(node.data, node.data[node.data[:, j] <= t], t, N)\n",
-    "           \n",
+    "            loo_error = (leave_one_out_error(node.data, node.data[node.data[:, j] <= t], t, N)\n",
+    "                       + leave_one_out_error(node.data, node.data[node.data[:, j] > t], t, N))\n",
+    "\n",
     "            # choose the best threshold that\n",
     "            if loo_error < e_min:\n",
     "                e_min = loo_error\n",
@@ -243,11 +253,11 @@
     "                # Call 'make_decision_split_node()' with 'D_try' randomly selected \n",
     "                # feature indices. This turns 'node' into a split node\n",
     "                # and returns the two children, which must be placed on the 'stack'.\n",
-    "                \n",
-    "                left, right = mak\n",
+    "                feature_indices = np.random.permutation(np.arange(D))[:D_try]\n",
+    "                left, right = make_decision_split_node(node, feature_indices)\n",
     "            else:\n",
     "                # Call 'make_decision_leaf_node()' to turn 'node' into a leaf node.\n",
-    "                ... # your code here\n",
+    "                make_decision_leaf_node(node)\n",
     "                \n",
     "    def predict(self, x):\n",
     "        leaf = self.find_leaf(x)\n",
@@ -257,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,11 +280,11 @@
     "    n, D = node.data.shape\n",
     "\n",
     "    # find best feature j (among 'feature_indices') and best threshold t for the split\n",
-    "    ... # your code here\n",
-    "\n",
+    "    \n",
+    "    \n",
     "    # create children\n",
-    "    left = Node()\n",
-    "    right = Node()\n",
+    "    node.left = Node()\n",
+    "    node.right = Node()\n",
     "    \n",
     "    # initialize 'left' and 'right' with the data subsets and labels\n",
     "    # according to the optimal split found above\n",
@@ -285,13 +295,11 @@
     "\n",
     "    # turn the current 'node' into a split node\n",
     "    # (store children and split condition)\n",
-    "    node.left = left\n",
-    "    node.right = right\n",
     "    node.feature = ...\n",
     "    node.threshold = ...\n",
     "\n",
     "    # return the children (to be placed on the stack)\n",
-    "    return left, right    "
+    "    return node.left, node.right    "
    ]
   },
   {
